package br.com.ajf.learnjavadesignpatterns.service;

public interface Service
{
	String getName();
	void execute();
}
